fix feedback cards text color on mobile

--- a/src/app/modules/landing-page/feed-back-carousel/feed-back-carousel.scss
+++ b/src/app/modules/landing-page/feed-back-carousel/feed-back-carousel.scss
@@ -31,7 +31,6 @@
       font-size: $font-size-2xl;
       font-weight: $font-weight-bold;
       color: $color-text-primary;
-      -webkit-text-fill-color: $color-text-primary;
       line-height: $line-height-tight;
       max-width: 300px;
       -webkit-font-smoothing: antialiased;
